# proof-of-work

./: Cargo.toml  README.md
src/: agent.rs  block_header.rs  blockchain.rs  coordinator.rs  main.rs
