[package]
name = "bitcoin_mining_coordination"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
sha2 = "0.10.8"
digest = { version = "0.10.7", features = [] }
bytes = { version = "1.5.0", features = [] }
time = { version = "0.3.30", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3"
